--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <title>albacore</title>
     <link rel="stylesheet" type="text/css" href="resoucres/css/style.css">
 </head>
+    <h1>Welcome to Trout Country</h1>
+    <p>backyard troutfishing blog by Zach Simon</p>
+    <img src="resources/images/Jones Canyon.JPG" alt="Jones Canyon on the Deschutes River">
 <body>
 </body>
 </html>
