added css style

--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
     <link rel="stylesheet" type="text/css" href="resoucres/css/style.css">
 </head>
     <h1>Welcome to Trout Country</h1>
-    <p>backyard troutfishing blog by Zach Simon</p>
+    <p>Backyard Troutfishing Blog by Zach Simon</p>
     <img src="resources/images/Jones Canyon.JPG" alt="Jones Canyon on the Deschutes River">
+    <p>"...and on the seventh day God went fishing."-Genesis</p>
 <body>
 </body>
 </html>
