--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>albacore</title>
-    <link rel="stylesheet" type="text/css" href="resoucres/css/style.css">
+    <link rel="stylesheet" type="text/css" href="resources/css/style.css">
 </head>
 <body>
     <h1>Welcome to Trout Country</h1>
