resized image in css

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Welcome to Trout Country</h1>
-    <p>Backyard Troutfishing Blog by Zach Simon</p>
+    <p>Backyard Trout Fishing by Zach Simon</p>
     <img src="resources/images/Jones Canyon.JPG" alt="Jones Canyon on the Deschutes River">
     <p>"...and on the seventh day God went fishing."-Genesis</p>
 </body>
