--- a/index.html
+++ b/index.html
@@ -8,8 +8,13 @@
 </head>
 <body>
     <h1>Welcome to Trout Country</h1>
-    <p>Backyard Trout Fishing by Zach Simon</p>
+    <ul>
+        <li>Home</li>
+        <li>Stories</li>
+        <li>About</li>
+    </ul>
+    <p>Stories, poems, tall tales about the rivers we fish.</p>
     <img src="resources/images/Jones Canyon.JPG" alt="Jones Canyon on the Deschutes River">
-    <p>"...and on the seventh day God went fishing."-Genesis</p>
+    <p class="sub-header">I knew I was getting ahead of myself when I began writing the story before I had even caught the fish.</p>
 </body>
 </html>
