--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@
     <link rel="stylesheet" type="text/css" href="resources/css/style.css">
 </head>
 <body>
-    <h1>Welcome to Trout Country</h1>
+    <h1>Fly Fiction</h1>
     <ul>
         <li>Home</li>
         <li>Stories</li>
         <li>About</li>
     </ul>
     <p>Stories, poems, tall tales about the rivers we fish.</p>
-    <img src="resources/images/Jones Canyon.JPG" alt="Jones Canyon on the Deschutes River">
+    <img src="resources/images/Jones Canyon.JPG" alt="Deschutes River">
     <p class="sub-header">I knew I was getting ahead of myself when I began writing the story before I had even caught the fish.</p>
 </body>
 </html>
