--- a/index.html
+++ b/index.html
@@ -8,11 +8,13 @@
 </head>
 <body>
     <h1>Fly Fiction</h1>
-    <ul>
-        <li>Home</li>
-        <li>Stories</li>
-        <li>About</li>
-    </ul>
+    <nav>
+        <ul>
+            <li>Home</li>
+            <li><a href="stories.html">Stories</a></li>
+            <li><a href="<"about.html">About</a>/li>
+        </ul>
+    </nav>
     <p>Stories, poems, tall tales about the rivers we fish.</p>
     <img src="resources/images/Jones Canyon.JPG" alt="Deschutes River">
     <p class="sub-header">I knew I was getting ahead of myself when I began writing the story before I had even caught the fish.</p>
