added stories page

--- a/stories.html
+++ b/stories.html
@@ -6,6 +6,7 @@
     <title>Fly Fiction</title>
     <link rel="stylesheet" type="text/css" href="resources/css/style.css">
 </head>
+
 <body>
     <h1>Fly Fiction</h1>
     <nav>
@@ -15,8 +16,8 @@
             <li><a href="about.html">About</a>/li>
         </ul>
     </nav>
-    <p>Stories, poems, tall tales about the rivers we fish.</p>
     <img src="resources/images/Jones Canyon.JPG" alt="Deschutes River">
-    <p class="sub-header">I knew I was getting ahead of myself when I began writing the story before I had even caught the fish.</p>
+    <p class="sub-header">Lower Deschutes: A Meditation on fly fishing,time, and the search for self.</p>
 </body>
+
 </html>
