--- a/stories.html
+++ b/stories.html
@@ -8,16 +8,16 @@
 </head>
 
 <body>
-    <h1>Fly Fiction</h1>
+    <h1>Stories</h1>
     <nav>
         <ul>
             <li><a href="index.html">Home</a></li>
             <li><a href="stories.html">Stories</a></li>
-            <li><a href="about.html">About</a>/li>
+            <li><a href="about.html">About</a></li>
         </ul>
     </nav>
-    <img src="resources/images/Jones Canyon.JPG" alt="Deschutes River">
-    <p class="sub-header">Lower Deschutes: A Meditation on fly fishing,time, and the search for self.</p>
+    <img src="resources/images/stillcreek.JPG" alt="still creek">
+    <p class="sub-header">where the stories begin</p>
 </body>
 
 </html>
