--- a/about.html
+++ b/about.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <h1>Fly Fiction</h1>
+    <h1>About</h1>
     <nav>
         <ul>
             <li><a href="index.html">Home</a></li>
@@ -17,8 +17,8 @@
             <li><a href="about.html">About</a></li>
         </ul>
     </nav>
-    <img src="resources/images/Jones Canyon.JPG" alt="Deschutes River">
-    <p class="sub-header">Lower Deschutes: A Meditation on fly fishing,time, and the search for self.</p>
+    <img src="resources/images/TROUTBUM.JPG" alt="the author">
+    <p class="sub-header">Local trout bum hydrates while waiting for the sun to drop.</p>
 </body>
 
 </html>
