about nav fixed

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <ul>
             <li><a href="index.html">Home</a></li>
             <li><a href="stories.html">Stories</a></li>
-            <li><a href="about.html">About</a>/li>
+            <li><a href="about.html">About</a></li>
         </ul>
     </nav>
     <p>Stories, poems, tall tales about the rivers we fish.</p>
