--- a/stories.html
+++ b/stories.html
@@ -18,7 +18,7 @@
     </nav>
     <img src="resources/images/stillcreek.JPG" alt="still creek">
     <p class="sub-header">where the stories begin</p>
-    <audio controls>
+    <audio controls controlsList="nodownload">
         <source  src="resources/audio/more_river.wav" type="audio/wav">
         Your browser does not support the audio element.
     </audio>
