adjust sub headers

--- a/about.html
+++ b/about.html
@@ -18,7 +18,7 @@
         </ul>
     </nav>
     <img src="resources/images/TROUTBUM.JPG" alt="the author">
-    <p class="sub-header3">Local trout bum hydrates while waiting for the sun to drop.</p>
+    <p class="sub-header">Local trout bum hydrates while waiting for the sun to drop.</p>
 </body>
 
 </html>
