--- a/about.html
+++ b/about.html
@@ -19,6 +19,7 @@
     </nav>
     <img src="resources/images/TROUTBUM.JPG" alt="the author">
     <p class="sub-header">Local trout bum hydrates while waiting for the sun to drop.</p>
+    <footer>&copy; Copyright 2020 Fly Fiction </footer>
 </body>
 
 </html>
