--- a/index.html
+++ b/index.html
@@ -18,5 +18,6 @@
     <p>Stories, poems, tall tales about the rivers we fish.</p>
     <img src="resources/images/Jones Canyon.JPG" alt="Deschutes River">
     <p class="sub-header">I knew I was getting ahead of myself when I began writing the story before I had even caught the fish.</p>
+    <footer>&copy; Copyright 2020 Fly Fiction </footer>
 </body>
 </html>
