--- a/stories.html
+++ b/stories.html
@@ -22,6 +22,7 @@
         <source  src="resources/audio/more_river.wav" type="audio/wav">
         Your browser does not support the audio element.
     </audio>
+    <footer>&copy; Copyright 2020 Fly Fiction </footer>
 </body>
 
 </html>
