--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link href="https://fonts.googleapis.com/css2?family=EB+Garamond&display=swap" rel="stylesheet">
 </head>
 <body>
-    <h1>Fly Fiction</h1>
+    <h1>Fly-Fiction</h1>
     <nav>
         <ul>
             <li><a href="index.html">Home</a></li>
