--- a/about.html
+++ b/about.html
@@ -16,6 +16,7 @@
             <li><a href="index.html">Home</a></li>
             <li><a href="stories.html">Stories</a></li>
             <li><a href="about.html">About</a></li>
+            <li><a href="rivers.html">Rivers</a></li>
         </ul>
     </nav>
     <img src="resources/images/TROUTBUM.JPG" alt="the author">
