--- a/rivers.html
+++ b/rivers.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,8 +8,9 @@
     <link rel="stylesheet" type="text/css" href="resources/css/style.css">
     <link href="https://fonts.googleapis.com/css2?family=EB+Garamond&display=swap" rel="stylesheet">
 </head>
+
 <body>
-    <h1>Fly-Fiction</h1>
+    <h1>Rivers</h1>
     <nav>
         <ul>
             <li><a href="index.html">Home</a></li>
@@ -17,9 +19,7 @@
             <li><a href="rivers.html">Rivers</a></li>
         </ul>
     </nav>
-    <p>Stories, poems, tall tales about the rivers we fish.</p>
-    <img src="resources/images/Jones Canyon.JPG" alt="Deschutes River">
-    <p class="sub-header">I knew I was getting ahead of myself when I began writing the story before I had even caught the fish.</p>
     <footer>&copy; Copyright 2020 Fly Fiction </footer>
 </body>
+
 </html>
