changed home photo

--- a/home.html
+++ b/home.html
@@ -11,14 +11,14 @@
     <h1>Fly-Fiction</h1>
     <nav>
     <ul>
-        <li><a href="index.html">Home</a></li>
+        <li><a href="home.html">Home</a></li>
         <li><a href="rivers.html">Rivers</a></li>
         <li><a href="stories.html">Stories</a></li>
         <li><a href="about.html">About</a></li>
     </ul>
     </nav>
     <p>Stories, poems, tall tales about the rivers we fish.</p>
-    <img src="resources/images/Jones Canyon.JPG" alt="Deschutes River">
+    <img src="resources/images/bike lower deschutes.JPG" alt="Deschutes River">
     <p class="sub-header">I knew I was getting ahead of myself when I began writing the story before I had even caught the fish.</p>
     <footer>&copy; Copyright 2020 Fly Fiction </footer>
 </body>
