--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <h1>Fly-Fiction</h1>
     <nav>
     <ul>
-        <li><a href="home.html">Home</a></li>
+        <li><a href="index.html">Home</a></li>
         <li><a href="rivers.html">Rivers</a></li>
         <li><a href="stories.html">Stories</a></li>
         <li><a href="about.html">About</a></li>
