added home text

--- a/index.html
+++ b/index.html
@@ -20,6 +20,26 @@
     <p>Stories, poems, tall tales about the rivers we fish.</p>
     <img src="resources/images/bike lower deschutes.JPG" alt="Deschutes River">
     <p class="sub-header">I knew I was getting ahead of myself when I began writing the story before I had even caught the fish.</p>
+    <div>
+        <p>Following rivers throughout the West
+        I kept finding stories eddying through my mind,
+        the thought of a single trout rising unfolded into poem.
+        Sometimes inspired by one-liners from my wiser than time
+        fishing buddy Blake, sometimes just watching mayflies
+        hatch from the water, these inner narratives took on a life of their own.</p>
+        
+        <p>If you're thinking, I'm just a trout bum who gets skunked
+        most of the time, you'd be right. But out there, when the current
+        is running through core, when you're gazing up at the canyon
+        carved by the wind over millennia, it's hard not to get lost in stories.</p>
+        
+        <p>Fly-Fiction is my personal attempt to document that feeling.
+        It's casting for that rainbow trout that you know
+        is lurking under the alders. It's unclasping your fly box
+        to pick out that size 16 elk hair caddis right as
+        the sun drops below the rim. Here's my portrait of trout fishing
+        my collection of tributaries I carry with me, here's fly-fiction.</p>
+    </div>
     <footer>&copy; Copyright 2020 Fly Fiction </footer>
 </body>
 </html>
