add homephoto and aligned text

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <p>Stories, poems, tall tales about the rivers we fish.</p>
     <img src="resources/images/bike lower deschutes.JPG" alt="Deschutes River">
     <p class="sub-header">I knew I was getting ahead of myself when I began writing the story before I had even caught the fish.</p>
-    <div>
+    <div id="hometext">
         <p>Following rivers throughout the West
         I kept finding stories eddying through my mind,
         the thought of a single trout rising unfolded into poem.
@@ -39,6 +39,9 @@
         to pick out that size 16 elk hair caddis right as
         the sun drops below the rim. Here's my portrait of trout fishing
         my collection of tributaries I carry with me, here's fly-fiction.</p>
+    </div>
+    <div id="homephoto">
+        <img src="resources/images/deschutes sunrise cars.JPG" style="height: 600px; width: 450px;" alt="sunrise">
     </div>
     <footer>&copy; Copyright 2020 Fly Fiction </footer>
 </body>
