--- a/index.html
+++ b/index.html
@@ -43,6 +43,11 @@
     <div id="homephoto">
         <img src="resources/images/deschutes sunrise cars.JPG" style="height: 600px; width: 450px;" alt="sunrise">
     </div>
+    <div id="riverlink">
+       <a href="rivers.html">To the River</a> 
+    </div>
+        
+    
     <footer>&copy; Copyright 2020 Fly Fiction </footer>
 </body>
 </html>
