added 2nd home photo

--- a/index.html
+++ b/index.html
@@ -43,6 +43,9 @@
     <div id="homephoto">
         <img src="resources/images/deschutes sunrise cars.JPG" style="height: 600px; width: 450px;" alt="sunrise">
     </div>
+   <div id="homephoto2">
+       <img src="resources/images/deschutes february.JPG" style="height: 200px; width: 300px;" alt="riverphoto">
+   </div>
     <div id="riverlink">
        <a href="rivers.html">To the River</a> 
     </div>
