edit opening text

--- a/index.html
+++ b/index.html
@@ -28,17 +28,17 @@
         fishing buddy Blake, sometimes just watching mayflies
         hatch from the water, these inner narratives took on a life of their own.</p>
         
-        <p>If you're thinking, I'm just a trout bum who gets skunked
+        <p>If you're thinking I'm just a trout bum who gets skunked
         most of the time, you'd be right. But out there, when the current
         is running through core, when you're gazing up at the canyon
-        carved by the wind over millennia, it's hard not to get lost in stories.</p>
+        carved by the wind and ancient floods over millennia, it's hard not to get lost in stories.</p>
         
         <p>Fly-Fiction is my personal attempt to document that feeling.
         It's casting for that rainbow trout that you know
         is lurking under the alders. It's unclasping your fly box
-        to pick out that size 16 elk hair caddis right as
+        to pick out that size 16 elk hair caddisfly right as
         the sun drops below the rim. Here's my portrait of trout fishing
-        my collection of tributaries I carry with me, here's fly-fiction.</p>
+        the collection of tributaries I carry with me, here's fly-fiction.</p>
     </div>
     <div id="homephoto">
         <img src="resources/images/deschutes sunrise cars.JPG" style="height: 600px; width: 450px;" alt="sunrise">
