home paragraph edit

--- a/index.html
+++ b/index.html
@@ -37,8 +37,10 @@
         It's casting for that rainbow trout that you know
         is lurking under the alders. It's unclasping your fly box
         to pick out that size 16 elk hair caddisfly right as
-        the sun drops below the rim. Here's my portrait of trout fishing
-        the collection of tributaries I carry with me, here's fly-fiction.</p>
+        the sun drops below the rim. Here's my portrait of fly-fishing for trout in the West,
+        the collection of tributaries I carry with me, the words that continue to circle.</p>
+        
+        <p> Welcome to Fly-Fiction.</p>
     </div>
     <div id="homephoto">
         <img src="resources/images/deschutes sunrise cars.JPG" style="height: 600px; width: 450px;" alt="sunrise">
