add second sub header

--- a/index.html
+++ b/index.html
@@ -44,6 +44,8 @@
     </div>
     <div id="homephoto">
         <img src="resources/images/deschutes sunrise cars.JPG" style="height: 600px; width: 450px;" alt="sunrise">
+        <p class="sub-header">Sometimes you pull over on the side of the road to camp for the night with no idea where you are. Just after sunrise we discover how lucky we are.</p>
+    
     </div>
    <div id="homephoto2">
        <img src="resources/images/deschutes february.JPG" style="height: 200px; width: 300px;" alt="riverphoto">
