--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
     <div id="hometext">
         <p>Following rivers throughout the West
         I kept finding stories eddying through my mind,
-        the thought of a single trout rising unfolded into poem.
+        the thought of a single trout rising unfolded into a poem.
         Sometimes inspired by one-liners from my wiser than time
-        fishing buddy Blake, sometimes just watching mayflies
-        hatch from the water, these inner narratives took on a life of their own.</p>
+        fishing buddy Blake, sometimes just watching a mayfly
+        hatch over the water, these inner narratives took on a life of their own.</p>
         
         <p>If you're thinking I'm just a trout bum who gets skunked
         most of the time, you'd be right. But out there, when the current
