--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     </div>
     <div id="homephoto">
         <img src="resources/images/deschutes sunrise cars.JPG" style="height: 600px; width: 450px;" alt="sunrise">
-        <p class="sub-header"> With the campgrounds closed due to Covid-19, we pulled over and camped on the side of the road. Waking up at sunrise we discover just how lucky we are.</p>
+        <p class="sub-header"> </p>
     
     </div>
    <div id="homephoto2">
