--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         is running through core, when you're gazing up at the canyon
         carved by the wind and ancient floods over millennia, it's hard not to get lost in stories.</p>
         
-        <p>Fly-Fiction is my personal attempt to document that feeling.
+        <p>Fly-Fiction is my attempt to document that feeling.
         It's casting for that rainbow trout that you know
         is lurking under the alders. It's unclasping your fly box
         to pick out that size 16 elk hair caddisfly right as
