added story image

--- a/stories.html
+++ b/stories.html
@@ -18,7 +18,7 @@
         <li><a href="about.html">About</a></li>
     </ul>
     </nav>
-    
+    <img src="resources/images/Blake Deschutes Cars.JPG" alt="Blake looking at map">
     <footer>&copy; Copyright 2020 Fly Fiction </footer>
 </body>
 
