--- a/stories.html
+++ b/stories.html
@@ -19,6 +19,7 @@
     </ul>
     </nav>
     <img src="resources/images/Blake Deschutes Cars.JPG" alt="Blake looking at map">
+    <p class="sub-header" >What it's like</p>
     <footer>&copy; Copyright 2020 Fly Fiction </footer>
 </body>
 
