change home image

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     </ul>
     </nav>
     <p>Stories, poems, tall tales about the rivers we fish.</p>
-    <img src="resources/images/bike lower deschutes.JPG" alt="Deschutes River">
+    <img src="resources/images/Nestucca stillwater.JPG" alt="Nestucca River">
     <p class="sub-header">I knew I was getting ahead of myself when I began writing the story before I had even caught the fish.</p>
     <div id="hometext">
         <p>Following rivers throughout the West
