--- a/stories.html
+++ b/stories.html
@@ -20,6 +20,10 @@
     </nav>
     <img src="resources/images/Blake Deschutes Cars.JPG" alt="Blake looking at map">
     <p class="sub-header" >What it's like</p>
+    <div>
+        <img src="resources/images/bike lower deschutes.JPG alt="Bike in front of Deschutes">
+        <h2>Lower Deschutes</h2>
+    </div>
     <footer>&copy; Copyright 2020 Fly Fiction </footer>
 </body>
 
