--- a/stories.html
+++ b/stories.html
@@ -21,8 +21,12 @@
     <img src="resources/images/Blake Deschutes Cars.JPG" alt="Blake looking at map">
     <p class="sub-header" >What it's like</p>
     <div>
-        <img src="resources/images/bike lower deschutes.JPG alt="Bike in front of Deschutes">
+        <img src="resources/images/bike lower deschutes.JPG" alt="Bike in front of Deschutes">
         <h2>Lower Deschutes</h2>
+        <audio controls controlsList="nodownload">
+            <source src="resources/audio/" type="audio/wav">
+            Your browser does not support the audio element.
+        </audio>
     </div>
     <footer>&copy; Copyright 2020 Fly Fiction </footer>
 </body>
