--- a/stories.html
+++ b/stories.html
@@ -20,7 +20,7 @@
     </nav>
     <img src="resources/images/Blake Deschutes Cars.JPG" alt="Blake looking at map">
     <p class="sub-header" >What it's like</p>
-    <div>
+    <div id="bikestory">
         <img src="resources/images/bike lower deschutes.JPG" alt="Bike in front of Deschutes">
         <h3>Lower Deschutes</h3>
         <audio controls controlsList="nodownload">
