--- a/rivers.html
+++ b/rivers.html
@@ -25,6 +25,12 @@
         <source src="resources/audio/more_river.wav" type="audio/wav">
         Your browser does not support the audio element.
     </audio>
+    <div id="nestucca1">
+        <img src="resources/images/Nestucca boulders.JPG" style="height: 200px; width: 300px;" alt="river">
+    </div>
+    <div id="storylink">
+        <a href="stories.html">Listen</a>
+    </div>
     <footer>&copy; Copyright 2020 Fly Fiction </footer>
 </body>
 
