edit about header2

--- a/about.html
+++ b/about.html
@@ -20,7 +20,7 @@
         </ul>
     </nav>
     <img src="resources/images/TROUTBUM.JPG" alt="the author">
-    <p class="sub-header">The author hydrates while waiting for the sun to drop.</p>
+    <p class="sub-header">The author.</p>
     <footer>&copy; Copyright 2020 Fly Fiction </footer>
 </body>
 
