update caption for lower deschutes story

--- a/stories.html
+++ b/stories.html
@@ -21,8 +21,10 @@
     <img src="resources/images/Blake Deschutes Cars.JPG" alt="Blake looking at map">
     <p class="sub-header" >What it's like</p>
     <div id="bikestory">
+        
         <img src="resources/images/bike lower deschutes.JPG" alt="Bike in front of Deschutes">
-        <h3>Lower Deschutes</h3>
+        <p class="sub-header"> A meditation of fly-fishing, time, and the search for self</p>
+        <h3>I. Lower Deschutes</h3>
         <audio controls controlsList="nodownload">
             <source src="resources/audio/" type="audio/wav">
             Your browser does not support the audio element.
