--- a/rivers.html
+++ b/rivers.html
@@ -19,12 +19,14 @@
             <li><a href="about.html">About</a></li>
         </ul>
     </nav>
+    <div id="stillcreek">
     <img src="resources/images/stillcreek.JPG" alt="still creek">
     <p class="sub-header">where the stories begin</p>
     <audio controls controlsList="nodownload">
         <source src="resources/audio/more_river.wav" type="audio/wav">
         Your browser does not support the audio element.
     </audio>
+    </div>
     <div id="nestucca1">
         <img src="resources/images/Nestucca boulders.JPG" style="height: 200px; width: 300px;" alt="river">
     </div>
