add top padding

--- a/about.html
+++ b/about.html
@@ -19,8 +19,10 @@
             <li><a href="about.html">About</a></li>
         </ul>
     </nav>
+    <div id="aboutphoto">
     <img src="resources/images/TROUTBUM.JPG" alt="the author">
     <p class="sub-header">The author.</p>
+    </div>
     <footer>&copy; Copyright 2020 Fly Fiction </footer>
 </body>
 
