--- a/index.html
+++ b/index.html
@@ -17,9 +17,11 @@
         <li><a href="about.html">About</a></li>
     </ul>
     </nav>
+    <div id="home">
     <p>Stories, poems, tall tales about the rivers we fish.</p>
     <img src="resources/images/Deschutes sunset.JPG" alt="Deschutes River">
     <p class="sub-header">I knew I was getting ahead of myself when I began writing the story before I had even caught the fish.</p>
+    </div>
     <div id="hometext">
         <p>Following rivers throughout the West
         I kept finding stories eddying through my mind,
