--- a/about.html
+++ b/about.html
@@ -23,6 +23,20 @@
     <img src="resources/images/TROUTBUM.JPG" alt="the author">
     <p class="sub-header">The author.</p>
     </div>
+    <div id="abouttext">
+        <p>Thank you for visiting Fly-Fiction. I started this project in the spring of 2020 when the Covid-19 pandemic began.
+        Learning to build a website, produce audio, and continuing to write has been a lasting and rewarding experience. Thank
+        you to everyone who has supported me along the way.</p>
+        <p>This project draws inspiration from fly fishing on rivers in Oregon and Washington. There will be more stories and poems
+        added soon along with other web features that I am working on. Eventually I hope to explore more of the West beyond my
+        familiar corner in the PNW.</p>
+        <p>Everything here-the words, photographs, audio are original work and I ask that you do not reproduce any of it without my
+        written permission. Please send me any comments, feedback, and questions you have. I would love to hear from you. You
+        can reach me at zach (at) flyfiction.com</p>
+        <p>If you would like to go fishing sometime, send a note.</p>
+        <p>More to come soon.</p>
+        <p>Zach</p>
+    </div>
     <footer>&copy; Copyright 2020 Fly Fiction </footer>
 </body>
 
