--- a/about.html
+++ b/about.html
@@ -29,8 +29,8 @@
         you to everyone who has supported me along the way.</p>
         <p>This project draws inspiration from fly fishing on rivers in Oregon and Washington. There will be more stories and poems
         added soon along with other web features that I am working on. Eventually I hope to explore more of the West beyond my
-        familiar corner in the PNW.</p>
-        <p>Everything here-the words, photographs, audio are original work and I ask that you do not reproduce any of it without my
+        corner in the PNW.</p>
+        <p>Everything here-the words, photographs, audio-are original work and I ask that you do not reproduce any of it without my
         written permission. Please send me any comments, feedback, and questions you have. I would love to hear from you. You
         can reach me at zach (at) flyfiction.com</p>
         <p>If you would like to go fishing sometime, send a note.</p>
