--- a/about.html
+++ b/about.html
@@ -37,6 +37,10 @@
         <p>More to come soon.</p>
         <p>Zach</p>
     </div>
+    <div id="thewest">
+        <img src="resources/images/Welcome to the West.JPG" alt="The West">
+        <p class="sub-header">The End</p>
+    </div>
     <footer>&copy; Copyright 2020 Fly Fiction </footer>
 </body>
 
