--- a/about.html
+++ b/about.html
@@ -26,9 +26,7 @@
     <div id="abouttext">
         <p>Thank you for visiting Fly-Fiction. I started this project in the spring of 2020 when the Covid-19 pandemic began.
         Learning to build a website, produce audio, and continuing to write has been a lasting and rewarding experience. Thank
-        you to everyone who has supported me along the way.</p>
-        <p>This project draws inspiration from fly fishing on rivers in Oregon and Washington. There will be more stories and poems
-        added soon along with other web features that I am working on. Eventually I hope to explore more of the West beyond my
+        you to everyone who has supported me along the way. There will be more stories and poems added soon along with other web features that I am working on. Eventually I hope to explore more of the West beyond my
         corner in the PNW.</p>
         <p>Everything here-the words, photographs, audio-are original work and I ask that you do not reproduce any of it without my
         written permission. Please send me any comments, feedback, and questions you have. I would love to hear from you. You
