about section edit

--- a/about.html
+++ b/about.html
@@ -24,11 +24,13 @@
     <p class="sub-header">The author.</p>
     </div>
     <div id="abouttext">
+       
         <p>Thank you for visiting Fly-Fiction. I started this project in the spring of 2020 when the Covid-19 pandemic began.
-        Learning to build a website, produce audio, and continuing to write has been a lasting and rewarding experience. Thank
-        you to everyone who has supported me along the way. There will be more stories and poems added soon along with other web features that I am working on. Eventually I hope to explore more of the West beyond my
-        corner in the PNW.</p>
-        <p>Everything here-the words, photographs, audio-are original work and I ask that you do not reproduce any of it without my
+        Learning to build a website, produce audio, and begin new writing projects has brought meaning during a time in life filled with uncertainty. Thank
+        you to everyone who has supported me along the way. </p>
+        
+        <p>Fly-Fiction will continue to expand and explore rivers throughout the West. New work
+            will be added soon. Everything here-the words, photographs, audio-are original work and I ask that you do not reproduce them without my
         written permission. Please send me any comments, feedback, and questions you have. I would love to hear from you. You
         can reach me at zach (at) flyfiction.com</p>
         <p>If you would like to go fishing sometime, send a note.</p>
