--- a/stories.html
+++ b/stories.html
@@ -25,7 +25,7 @@
     
     <div id="bikestory">
         <img src="resources/images/bike lower deschutes.JPG" alt="Bike in front of Deschutes">
-        <p class="sub-header"> A meditation of fly-fishing, time, and the search for self</p>
+        <p class="sub-header"> A meditation on fly-fishing, time, and the search for self</p>
         <h3>I. Lower Deschutes</h3>
         <audio controls controlsList="nodownload">
             <source src="resources/audio/" type="audio/wav">
