update photo file

--- a/rivers.html
+++ b/rivers.html
@@ -19,9 +19,9 @@
             <li><a href="about.html">About</a></li>
         </ul>
     </nav>
-    <div id="stillcreek">
-    <img src="resources/images/stillcreek.JPG" alt="still creek">
-    <p class="sub-header">where the stories begin</p>
+    <div id="creek">
+    <img src="resources/images/Nestucca stillwater.JPG" alt="creek">
+    <p class="sub-header">where it begins</p>
     <audio controls controlsList="nodownload">
         <source src="resources/audio/more_river.wav" type="audio/wav">
         Your browser does not support the audio element.
