--- a/about.html
+++ b/about.html
@@ -30,8 +30,7 @@
         you to everyone who has supported me along the way. </p>
         
         <p>Fly-Fiction will continue to expand and explore rivers throughout the West. New work
-            will be added soon. Everything here-the words, photographs, audio-are original work and I ask that you do not reproduce them without my
-        written permission. Please send me any comments, feedback, and questions you have. I would love to hear from you. You
+            will be added soon. Everything here-the words, photographs, audio-are original work and I ask that you do not reproduce them without my permission. Please send me any comments, feedback, and questions you have. I would love to hear from you. You
         can reach me at zach (at) flyfiction.com</p>
         <p>If you would like to go fishing sometime, send a note.</p>
         <p>More to come soon.</p>
