--- a/rivers.html
+++ b/rivers.html
@@ -23,7 +23,7 @@
     <img src="resources/images/Nestucca stillwater.JPG" alt="creek">
     <p class="sub-header">where it begins</p>
     <audio controls controlsList="nodownload">
-        <source src="resources/audio/more_river.wav" type="audio/wav">
+        <source src="resources/audio/nestucca audio intro.wav" type="audio/wav">
         Your browser does not support the audio element.
     </audio>
     </div>
