added sub header to home

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     </div>
     <div id="homephoto">
         <img src="resources/images/deschutes sunrise cars.JPG" style="height: 600px; width: 450px;" alt="sunrise">
-        <p class="sub-header"> </p>
+        <p class="sub-header">It goes like this...</p>
     
     </div>
    <div id="homephoto2">
