--- a/rivers.html
+++ b/rivers.html
@@ -30,6 +30,9 @@
     <div id="nestucca1">
         <img src="resources/images/Nestucca boulders.JPG" style="height: 200px; width: 300px;" alt="river">
     </div>
+    <div id="map">
+        <iframe width="300" height="200" frameborder="0" scrolling="no" allowfullscreen src="https://viewer.nationalmap.gov/advanced-viewer/viewer/index.html?extent=-14028862.5424%2C5116625.8943%2C-12500121.9767%2C5811285.6073%2C102100"></iframe>
+    </div>
     <div id="storylink">
         <a href="stories.html">Listen</a>
     </div>
