--- a/stories.html
+++ b/stories.html
@@ -32,6 +32,9 @@
             Your browser does not support the audio element.
         </audio>
     </div>
+    <div id="aboutlink">
+        <a href="about.html">About Fly Fiction</a>
+    </div>
     
     <footer>&copy; Copyright 2020 Fly Fiction </footer>
 </body>
