--- a/stories.html
+++ b/stories.html
@@ -33,7 +33,7 @@
         </audio>
     </div>
     <div id="aboutlink">
-        <a href="about.html">About Fly Fiction</a>
+        <a href="about.html">About Fly-Fiction</a>
     </div>
     
     <footer>&copy; Copyright 2020 Fly Fiction </footer>
