add lowerdeschutes mp3

--- a/stories.html
+++ b/stories.html
@@ -28,7 +28,8 @@
         <p class="sub-header"> A meditation on fly-fishing, time, and the search for self</p>
         <h3>I. Lower Deschutes</h3>
         <audio controls controlsList="nodownload">
-            <source src="resources/audio/" type="audio/wav">
+            <source src="resources/audio/Lower Deschutes Audio Story ext 3.mp3" type="audio/mp3">
+    
             Your browser does not support the audio element.
         </audio>
     </div>
