--- a/about.html
+++ b/about.html
@@ -26,11 +26,9 @@
     <div id="abouttext">
        
         <p>Thank you for visiting Fly-Fiction. I started this project in the spring of 2020 when the Covid-19 pandemic began.
-        Learning to build a website, produce audio, and begin new writing projects has been meaningful during a time in life filled with uncertainty. Thank
-        you to everyone who has supported me along the way. </p>
+        Learning to build a website, produce audio, and begin new writing projects has been meaningful during a time in life filled with uncertainty. </p>
         
-        <p>Fly-Fiction will continue to expand and explore rivers throughout the West. New work
-            will be added soon. Everything here-the words, photographs, audio-are original work and I ask that you do not reproduce them without my permission. Please send me a note with any comments, feedback, and questions you have. I would love to hear from you. You
+        <p>Fly-Fiction will continue to expand and explore rivers throughout the West. Everything here-the words, photographs, audio-are original work and I ask that you do not reproduce them without my permission. Please send me a note with any comments, feedback, and questions you have. I would love to hear from you. You
         can reach me at zach (at) flyfiction.com</p>
         <p>More to come soon.</p>
         <p>Zach</p>
