--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <p class="sub-header">I knew I was getting ahead of myself when I began writing the story before I had even caught the fish.</p>
     </div>
     <div id="hometext">
-        <p>Following rivers throughout the West
+        <p class="intro">Following rivers throughout the West
         I kept finding stories eddying through my mind,
         the thought of a single trout rising unfolded into a poem.
         Sometimes inspired by one-liners from my wiser than time
