--- a/about.html
+++ b/about.html
@@ -37,7 +37,7 @@
         <img src="resources/images/Welcome to the West.JPG" alt="The West">
         <p class="sub-header">The End</p>
     </div>
-    <footer>&copy; Copyright 2020 Fly Fiction </footer>
+    <footer>&copy; Copyright 2020-2021 Fly Fiction </footer>
 </body>
 
 </html>
