--- a/rivers.html
+++ b/rivers.html
@@ -37,7 +37,7 @@
     <div id="storylink">
         <a href="stories.html">Listen</a>
     </div>
-    <footer>&copy; Copyright 2020 Fly Fiction </footer>
+    <footer>&copy; Copyright 2020-2021 Fly Fiction </footer>
 </body>
 
 </html>
