--- a/index.html
+++ b/index.html
@@ -56,6 +56,6 @@
        <a href="rivers.html">To the River</a> 
     </div>
         
-    <footer>&copy; Copyright 2020 Fly Fiction </footer>
+    <footer>&copy; Copyright 2020-2021 Fly Fiction </footer>
 </body>
 </html>
