--- a/stories.html
+++ b/stories.html
@@ -37,7 +37,7 @@
         <a href="about.html">About Fly-Fiction</a>
     </div>
     
-    <footer>&copy; Copyright 2020 Fly Fiction </footer>
+    <footer>&copy; Copyright 2020-2021 Fly Fiction </footer>
 </body>
 
 </html>
